test/syntaxerrors/TestIllegalMethodName.jdc
println("Hello world!");

void Foo() {
    println("bar");
}